[gd_scene load_steps=5 format=3 uid="uid://bxyiv3473imnt"]

[ext_resource type="Script" path="res://scripts/enemy_a.gd" id="1_8kf3g"]
[ext_resource type="Texture2D" uid="uid://b4d5aokeji6ct" path="res://assets/sprites/enemies/enemy_a.png" id="2_ys873"]

[sub_resource type="CircleShape2D" id="CircleShape2D_em6p7"]
radius = 119.067

[sub_resource type="CircleShape2D" id="CircleShape2D_xn0h7"]
radius = 120.507

[node name="Mine" type="RigidBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_8kf3g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-6, 0)
shape = SubResource("CircleShape2D_em6p7")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ys873")

[node name="KillZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone"]
position = Vector2(-7, -1)
shape = SubResource("CircleShape2D_xn0h7")
debug_color = Color(0.992157, 0, 0.266667, 0.419608)

[node name="Timer" type="Timer" parent="KillZone"]

[connection signal="body_entered" from="KillZone" to="." method="_on_kill_zone_body_entered"]
[connection signal="timeout" from="KillZone/Timer" to="." method="_on_timer_timeout"]
